@@ -1,5 +1,8 @@
 Release Notes
 
+* 5/18/2016
+  * removed maxinputsize from JG
+
 * 5/16/2016
   * fixed ZeroDivision error in AtlasPTB
   * changed AtlasPTB to skip data locality check when no nucleus has data
